--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@untitledui/icons": "^0.0.21",
     "antd": "^6.2.3",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
